# nrgine

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.gcc  Makefile  Makefile.gnumake  README.md  common.mk  docker-compose.yml  size.py
include/: application.h  renderer.h
include/common/: factory.h  forwards.h  transform_matrix.h
include/common/interfaces/: IMovable.h  IResource.h
include/interfaces/: IApplication.h
include/resources/: manager.h  model.h  resource.h  shader.h
include/scene/: node.h  scene.h
include/scene/objects/: basic.h  camera.h  common.h  light.h  model.h  object.h  physical.h
lib/imgui/: Makefile
lib/imgui/src/: TextEditor.cpp
lib/reactphysics3d/: Makefile
lib/reactphysics3d/src/mathematics/: Transform.cpp
res/shaders/: test.frag  test.vert
src/: application.cpp  main.cpp  renderer.cpp
src/resources/: manager.cpp  model.cpp  shader.cpp
src/scene/: node.cpp  scene.cpp
src/scene/objects/: camera.cpp  light.cpp  model.cpp  object.cpp  physical.cpp
test/include/: application_mock.h
test/res/shader/: test.frag  test.vert
test/src/: test_main.cpp
test/src/resources/: test_manager.cpp  test_model.cpp  test_shader.cpp
test/src/scene/: scene.cpp  test_scene.cpp
